Align textarea with form to prevent a shrinking popover resulting in the cursor leaving the popover boundary

--- a/src/css/Feedback.scss
+++ b/src/css/Feedback.scss
@@ -44,6 +44,7 @@
   border-radius:  $base-border-radius;
   font-family: inherit;
   resize: vertical;
+  min-height: 110px;
 }
 
 .Feedback__response-send {
